[gd_scene load_steps=3 format=3 uid="uid://b7il0d8a3csci"]

[ext_resource type="Script" uid="uid://bmdopifxfakxk" path="res://scripts/game.gd" id="1_ibkli"]
[ext_resource type="PackedScene" uid="uid://dsckvvmxhdqcw" path="res://scenes/Base.tscn" id="2_qbsmt"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ibkli")

[node name="Soldiers" type="Control" parent="."]
anchors_preset = 0
metadata/_edit_lock_ = true

[node name="SelfLifeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 1.0
anchor_right = 0.01
anchor_bottom = 1.0
grow_vertical = 0
theme_override_font_sizes/font_size = 128
text = "100"

[node name="SoldierCommonAmountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_right = 0.02
offset_right = 63.0
offset_bottom = 82.0
theme_override_font_sizes/font_size = 60
text = "10"

[node name="TotalEnemyAmount" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.99
anchor_right = 0.99
offset_left = -74.0
offset_bottom = 82.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "24"
horizontal_alignment = 2

[node name="SoldierRareAmountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_right = 0.08
offset_right = 63.0
offset_bottom = 82.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 60
text = "10"

[node name="SoldierLegendaryAmountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.14
anchor_right = 0.14
offset_right = 63.0
offset_bottom = 82.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 60
text = "10"

[node name="MultiplierLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "1.2x"
horizontal_alignment = 1

[node name="EnemyLifeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.99
anchor_top = 1.0
anchor_right = 0.99
anchor_bottom = 1.0
offset_left = -217.0
offset_top = -173.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 128
text = "100"
horizontal_alignment = 2

[node name="Menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -492.0
offset_top = -262.4
offset_right = 408.0
offset_bottom = 200.80005
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.301961, 0.301961, 0.847059)

[node name="BackToHomeButton" type="Button" parent="Menu/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.00003
offset_top = -54.200027
offset_right = 272.79993
offset_bottom = 44.199966
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "Back to Home"

[node name="PlayAgainButton" type="Button" parent="Menu/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
offset_left = -268.8
offset_top = -40.960022
offset_right = 267.60004
offset_bottom = 57.439972
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "Play again"

[node name="ResultLabel" type="RichTextLabel" parent="Menu/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
offset_left = -451.5
offset_top = -9.76001
offset_right = 451.5
offset_bottom = 139.23999
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 96
bbcode_enabled = true
text = "Won"
horizontal_alignment = 1

[node name="TotalEnemyLifeLabel" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.97
anchor_top = 0.87
anchor_right = 0.97
anchor_bottom = 0.87
offset_left = -150.0
offset_top = -87.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.635294, 0, 1)
theme_override_font_sizes/font_size = 64
text = "1000"
horizontal_alignment = 2

[node name="TotalSelfLifeLabel" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.87
anchor_right = 0.03
anchor_bottom = 0.87
offset_top = -87.0
offset_right = 150.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.635294, 0, 1)
theme_override_font_sizes/font_size = 64
text = "1000"
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Base" parent="." instance=ExtResource("2_qbsmt")]
visible = false
layout_mode = 1

[node name="FightAgainstLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -87.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.244776, 0.244776, 0.244776, 1)
theme_override_font_sizes/font_size = 64
text = "FIGHT_AGAINST"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Menu/ColorRect/BackToHomeButton" to="." method="_on_back_to_home_button_pressed"]
[connection signal="pressed" from="Menu/ColorRect/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="spawn_enemy"]
